canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - name: canary-demo
        # image: argoproj/rollouts-demo:green
        image: argoproj/rollouts-demo:red
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      # canaryService: canary-demo-preview
      # stableService: canary-demo
      steps:
      - setWeight: 40
      - pause: {duration: 60}
      - setWeight: 80
      - pause: {duration: 60}
      - setWeight: 100
